# ticket_maker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.lambda  Makefile  README.md  app.py  mypy.ini  package-lock.json  pyproject.toml  template.yaml  ticketer_cli.py
src/: __init__.py  bootstrap.py  config.py
src/controllers/: __init__.py  artist_image.py  asset.py  brassica.py  file_management.py  health.py  shortcut.py  stripe.py  ticket.py  user.py  user_metadata.py
src/lib/: authorized_api_handler.py  constants.py  custom_exceptions.py  dynamo_connector.py  dynamo_utils.py  enums.py  lambda_utils.py  loggers.py  token_authentication.py  utilities.py
src/models/: auth0.py  jira.py  openai.py  shortcut.py
src/models/dynamo/: asset.py  documents.py  order.py  portfolio.py  ticket.py  transaction.py  user.py  user_metadata.py
src/schemas/: file.py  ticket.py  user_metadata.py
src/services/: asset.py  brassica.py  clients.py  file_management.py  jira.py  shortcut.py  ticket.py  user.py  user_metadata.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: main.jsx
ui/src/components/: App.jsx  ButtonSpinner.jsx  HomePage.jsx  Layout.jsx  Layout.tailwind.js  Logo.jsx  Notice.jsx  Toast.jsx  WelcomePage.jsx
ui/src/components/tables/: FilesTable.jsx  TicketsTable.jsx  TicketsTable.tailwind.js  (+1 more)
ui/src/context/: UploadTranscriptContext.jsx
ui/src/hooks/: useRequest.js
ui/src/views/: AddPlatformKeys.jsx  ArtistImages.jsx  BrassicaOfferings.jsx  BrassicaSecurities.jsx  CreateBrassicaOffering.jsx  CreateBrassicaSecurity.jsx  DeleteUser.jsx  EditBrassicaOffering.jsx  UploadTranscript.jsx  UploadTranscript.tailwind.js  UserSettings.jsx  WelcomePage.jsx
(+6 files in other folders)
