[tool.poetry]
name = "ticket-maker"
version = "0.1.0"
description = ""
authors = ["Jake Pifer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
boto3 = "^1.34.39"
pillow = "^10.2.0"
jwt = "^1.3.1"
uvicorn = "^0.27.1"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
