[tool.poetry]
name = "ticket-maker"
version = "0.1.0"
description = ""
authors = ["Jake Pifer"]
readme = "README.md"

[[tool.poetry.source]]
name= "fury"
url = "https://jake-pixelum.fury.site/pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
pixelum-core = {version = "^0.1.1", source = "fury"}
stripe = "^8.8.0"
fastapi = "^0.110.0"
requests = "^2.31.0"
boto3 = "^1.34.71"
pillow = "^10.2.0"
uvicorn = "^0.29.0"
pyjwt = "^2.8.0"
openai = "^1.14.3"
black = "^24.3.0"
pdoc3 = "^0.10.0"
mangum = "^0.17.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
